--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
 <script src="js/three.min.js"></script> 
 <script src="js/app.js"></script>  
 <script src="js/musicmetadata.js"></script> 
+<style>
+input[type='range']  {
+		-webkit-appearance: none ;
+		width:100px;
+	}
+	input[type='range']::-webkit-slider-runnable-track {
+		-webkit-appearance: none ;
+		appearance: none ;
+		border-radius: 5px;
+		box-shadow: inset 1px 1px 1px rgba(000,000,000,0.10);
+		background-color: #CCC;
+		height: 12px;
+		vertical-align:middle;
+		border: none;
+		cursor: pointer;
+	}
+	input[type='range']::-webkit-slider-thumb {
+		-webkit-appearance: none;
+		border-radius: 100%;
+		background-color: #037cd5;
+		box-shadow: inset 0 0 0 4px #CCC, inset 0 0 4px #CCC, inset 0 0 0 4px #CCC;
+		height: 22px;
+		width: 22px;
+		vertical-align:middle;
+		border: none;
+		cursor: pointer;
+		margin-top: -6px;
+	}
+ </style>
 </head>
 
 <body onload="ini()">  
@@ -16,30 +45,43 @@
 <br>
 <label id="fn" >...</label>
 
-<div style="position: absolute; left: 10px; top: 460px;" >
- <span id="bassValue">bass = 0</span></div>
-<div style="position: absolute; left: 220px; top: 460px;" >
- <span id="trebleValue">treble = 0</span><br></div>
+<div style="position: absolute; left: 10px; top: 458px;" >
+ <span id="panValueX">dist_X = 4</span>
+ <input type="range" id="numX" min="-5" max="15" step="0.2" value="4" /></div> 
 
-<div style="position: absolute; left: 10px; top: 480px;" >
+<div style="position: absolute; left: 220px; top: 458px;" >
+ <span id="panValueY" >pos_Y = 2</span> 
+ <input type="range" id="numY" min="-5" max="15" step="0.2" value="2"  /></div><br>
+
+<div style="position: absolute; left: 10px; top: 500px;" >
+ <span id="panValueZ" >pos_Z =-4</span>   
+ <input type="range" id="numZ" min="-15" max="5" step="0.2" value="-4" /></div> 
+ <br>
+
+
+<div style="position: absolute; left: 20px; top: 545px;" >
+ <span id="bassValue">bass = 0</span>
  <input type="range" id="bass" min="-15" max="15" step="0.2" value="0" /></div>
-<div style="position: absolute; left: 220px; top: 480px;" >
- <input type="range" id="treble" min="-15" max="15" step="0.2" value="0" /></div>
+
+<div style="position: absolute; left: 220px; top: 545px;" >
+ <span id="trebleValue">treble = 0</span>
+<input type="range" id="treble" min="-15" max="15" step="0.2" value="0" /></div>
+
 <br>
 
-<div style="position: absolute; left: 10px; top: 510px;" >
+<div style="position: absolute; left: 10px; top: 580px;" >
  <span id="rspVol">surround = 0.0</span></div>
 
-<div style="position: absolute; left: 130px; top: 510px;" >
- <input type="range" id="rSp" min="0" max="1" step="0.02" value="0.0" /></div>
+<div style="position: absolute; left: 130px; top: 580px;" >
+ <input type="range" id="rSp" min="0" max="1" step="0.02" /></div>
 
-<div style="position: absolute; left: 265px; top: 510px;" > 
+<div style="position: absolute; left: 265px; top: 580px;" > 
  Loop=<button id="loop" >OFF</button></div>
 <br> 
 
-<div style="position: absolute; left: 10px; top: 540px;" >  
+<div style="position: absolute; left: 10px; top: 605px;">  
  <input type="file" id="input" multiple accept="audio/*"></div>
-<br><br><br><br>
+<br><br><br><br><br>
 <br><br>
 
 <div style="position: absolute; left: 120px; top: 70px;" >
