--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>   
 <title>HTML5 Web Audio App</title> 
 <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
-<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">  
+<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no"> 
+<link rel="manifest" href="manifest.json"> 
 <script src="js/three.min.js"></script> 
 <script src="js/app.js"></script>  
 <script src="js/musicmetadata.js"></script> 
