a ref index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ input[type='range']  {
 </head>
 
 <body onload="ini()">  
-<b>Virtual Speakers </b><a href="https://virtualsp.github.io/VirtualSPM/">here</a><br>
+<b>Virtual Speakers </b><a href="https://virtualsp.github.io/VirtualSPM/index.html">here</a><br>
 
 <canvas id="tCanvas" width="400" height="400" style="border:1px solid #CCC;  z-index: 2"/></canvas>
 <br>
