--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="vsp.appcache">
 <head>   
 <title>HTML5 Web Audio App</title> 
 <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
@@ -43,7 +43,7 @@ input[type='range']  {
 </head>
 
 <body onload="ini()">  
-<b>Virtual Speakers </b><a href="https://virtualsp.github.io/VirtualSPM/index.html">here</a><br>
+<b>Virtual Speakers </b><a href="https://virtualsp.github.io/VirtualSPD/index.html">here</a><br>
 
 <canvas id="tCanvas" width="400" height="400" style="border:1px solid #CCC;  z-index: 2"/></canvas>
 <br>
