--- a/index0.html
+++ b/index0.html
@@ -14,7 +14,7 @@
 <style>
 input[type='range']  {
 		-webkit-appearance: none ;
-		width:256px;
+		width:200px;
 	}
 	input[type='range']::-webkit-slider-runnable-track {
 		-webkit-appearance: none ;
@@ -49,32 +49,44 @@ input[type='range']  {
 <br>
 <label id="fn" >...</label>
 
+<div style="position: absolute; left: 10px; top: 460px;" >
+ <span id="panValueX">distance_X</span>
+ <input type="range" id="numX" min="-5" max="15" step="0.2" value="4" /></div> 
+
+<div style="position: absolute; left: 10px; top: 490px;" >
+ <span id="panValueY" >position_Y</span> 
+ <input type="range" id="numY" min="-5" max="15" step="0.2" value="2"  /></div><br>
+
+<div style="position: absolute; left: 10px; top: 520px;" >
+ <span id="panValueZ" >position_Z</span>   
+ <input type="range" id="numZ" min="-15" max="5" step="0.2" value="-4" /></div> 
+ <br>
 
 
-<div style="position: absolute; left: 10px; top: 450px;" >
- <input type="range" id="bass" min="-15" max="15" step="0.2" value="0" />
- <span id="bassValue">bass = 0.0</span></div>
+<div style="position: absolute; left: 10px; top: 550px;" >
+ <span id="bassValue">bass</span>
+ <input type="range" id="bass" min="-15" max="15" step="0.2" value="0" /></div>
 
-<div style="position: absolute; left: 10px; top: 480px;" >
- <input type="range" id="treble" min="-15" max="15" step="0.2" value="0" />
- <span id="trebleValue">treble = 0.0</span></div>
+<div style="position: absolute; left: 210px; top: 550px;" >
+ <span id="trebleValue">treble</span>
+<input type="range" id="treble" min="-15" max="15" step="0.2" value="0" /></div>
 
 <br>
 
-<div style="position: absolute; left: 10px; top: 510px;" >
- <input type="range" id="rSp" min="0" max="1" step="0.1" value="0.0" />
- <span id="rspVol">surround = 0.0</span></div>
+<div style="position: absolute; left: 10px; top: 580px;" >
+ <span id="rspVol">surround</span>
+<input type="range" id="rSp" min="0" max="1" step="0.02" value="0.2" /></div>
 
-<div style="position: absolute; left: 10px; top: 540px;" > 
+<div style="position: absolute; left: 265px; top: 580px;" > 
  Loop=<button id="loop" >OFF</button></div>
 <br> 
 
-<div style="position: absolute; left: 110px; top: 540px;">  
+<div style="position: absolute; left: 10px; top: 610px;">  
  <input type="file" id="input" multiple accept="audio/*"></div>
 <br><br><br><br>
-<br><br>
+<br><br><br><br>
 
-<div style="position: absolute; left: 120px; top: 40px;" >
+<div style="position: absolute; left: 120px; top: 70px;" >
 <img id='myimg' style="position: absolute; z-index: -1">
   <div id="info"/></div>
 
