--- a/index.html
+++ b/index.html
@@ -43,33 +43,33 @@ input[type='range']  {
 </head>
 
 <body onload="ini()">  
-<b>Virtual Speakers </b><br>
+<b>Web Virtual Speakers </b><br>
 
 <canvas id="tCanvas" width="400" height="400" style="border:1px solid #CCC;  z-index: 2"/></canvas>
 <br>
-<label id="fn" >...</label>
+<label id="fn" >Move Speakers by drag/swipe(xy) & wheel/pinch(z)</label>
 
 
 
-<div style="position: absolute; left: 10px; top: 450px;" >
+<div style="position: absolute; left: 10px; top: 460px;" >
  <input type="range" id="bass" min="-15" max="15" step="0.2" value="0" />
  <span id="bassValue">bass = 0.0</span></div>
 
-<div style="position: absolute; left: 10px; top: 480px;" >
+<div style="position: absolute; left: 10px; top: 490px;" >
  <input type="range" id="treble" min="-15" max="15" step="0.2" value="0" />
  <span id="trebleValue">treble = 0.0</span></div>
 
 <br>
 
-<div style="position: absolute; left: 10px; top: 510px;" >
+<div style="position: absolute; left: 10px; top: 520px;" >
  <input type="range" id="rSp" min="0" max="1" step="0.1" value="0.0" />
  <span id="rspVol">surround = 0.0</span></div>
 
-<div style="position: absolute; left: 10px; top: 540px;" > 
+<div style="position: absolute; left: 10px; top: 550px;" > 
  Loop=<button id="loop" >OFF</button></div>
 <br> 
 
-<div style="position: absolute; left: 110px; top: 540px;">  
+<div style="position: absolute; left: 110px; top: 550px;">  
  <input type="file" id="input" multiple accept="audio/*"></div>
 <br><br><br><br>
 <br><br>
