--- a/index.html
+++ b/index.html
@@ -1,48 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html manifest="vsp.appcache">
 <head>   
 <title>HTML5 Web Audio App</title> 
 <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
-<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">  
+<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no"> 
+
+<link rel="manifest" href="manifest.json"> 
+<link rel="icon" href="icon_48.png">
+
 <script src="js/three.min.js"></script> 
 <script src="js/app.js"></script>  
 <script src="js/musicmetadata.js"></script> 
+<style>
+input[type='range']  {
+		-webkit-appearance: none ;
+		width:256px;
+	}
+	input[type='range']::-webkit-slider-runnable-track {
+		-webkit-appearance: none ;
+		appearance: none ;
+		border-radius: 5px;
+		box-shadow: inset 1px 1px 1px rgba(000,000,000,0.10);
+		background-color: #CCC;
+		height: 12px;
+		vertical-align:middle;
+		border: none;
+		cursor: pointer;
+	}
+	input[type='range']::-webkit-slider-thumb {
+		-webkit-appearance: none;
+		border-radius: 100%;
+		background-color: #037cd5;
+		box-shadow: inset 0 0 0 4px #CCC, inset 0 0 4px #CCC, inset 0 0 0 4px #CCC;
+		height: 22px;
+		width: 22px;
+		vertical-align:middle;
+		border: none;
+		cursor: pointer;
+		margin-top: -6px;
+	}
+ </style>
 </head>
 
 <body onload="ini()">  
-<b>Virtual Speakers </b>1.2.2<br>
+<b>Web Virtual Speakers </b> 1.2.3<br>
 
 <canvas id="tCanvas" width="400" height="400" style="border:1px solid #CCC;  z-index: 2"/></canvas>
 <br>
-<label id="fn" >...</label>
+<label id="fn" >Move Speakers by drag/swipe(xy) & wheel/pinch(z)</label>
+
+
 
 <div style="position: absolute; left: 10px; top: 460px;" >
- <span id="bassValue">bass = 0</span></div>
-<div style="position: absolute; left: 220px; top: 460px;" >
- <span id="trebleValue">treble = 0</span><br></div>
+ <input type="range" id="bass" min="-15" max="15" step="0.2" value="0" />
+ <span id="bassValue">bass = 0.0</span></div>
 
-<div style="position: absolute; left: 10px; top: 480px;" >
- <input type="range" id="bass" min="-15" max="15" step="0.2" value="0" /></div>
-<div style="position: absolute; left: 220px; top: 480px;" >
- <input type="range" id="treble" min="-15" max="15" step="0.2" value="0" /></div>
+<div style="position: absolute; left: 10px; top: 490px;" >
+ <input type="range" id="treble" min="-15" max="15" step="0.2" value="0" />
+ <span id="trebleValue">treble = 0.0</span></div>
+
 <br>
 
-<div style="position: absolute; left: 10px; top: 510px;" >
+<div style="position: absolute; left: 10px; top: 520px;" >
+ <input type="range" id="rSp" min="0" max="1" step="0.1" value="0.0" />
  <span id="rspVol">surround = 0.0</span></div>
 
-<div style="position: absolute; left: 130px; top: 510px;" >
- <input type="range" id="rSp" min="0" max="1" step="0.02" value="0.0" /></div>
-
-<div style="position: absolute; left: 265px; top: 510px;" > 
+<div style="position: absolute; left: 10px; top: 550px;" > 
  Loop=<button id="loop" >OFF</button></div>
 <br> 
 
-<div style="position: absolute; left: 10px; top: 540px;" >  
+<div style="position: absolute; left: 110px; top: 550px;">  
  <input type="file" id="input" multiple accept="audio/*"></div>
 <br><br><br><br>
 <br><br>
 
-<div style="position: absolute; left: 120px; top: 70px;" >
+<div style="position: absolute; left: 124px; top: 40px;" >
 <img id='myimg' style="position: absolute; z-index: -1">
   <div id="info"/></div>
 
