--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
 <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no"> 
 
-<link rel="manifest" href="manifest.json"> 
-<link rel="icon" href="icon_48.png">
+<link rel="manifest" href="/manifest.json"> 
+<link rel="icon" href="/icon_48.png">
 
 <script src="js/three.min.js"></script> 
 <script src="js/app.js"></script>  
