--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
 <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no"> 
 
-<link rel="manifest" href="/manifest.json"> 
-<link rel="icon" href="/icon_48.png">
+<link rel="manifest" href="manifest.json"> 
+<link rel="icon" href="icon_48.png">
 
 <script src="js/three.min.js"></script> 
 <script src="js/app.js"></script>  
 <script src="js/musicmetadata.js"></script> 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-100014294-1', 'auto');
+  ga('send', 'pageview');
+</script>
 <style>
 input[type='range']  {
 		-webkit-appearance: none ;
