--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
 <script src="js/three.min.js"></script> 
 <script src="js/app.js"></script>  
 <script src="js/musicmetadata.js"></script> 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-100014294-1', 'auto');
-  ga('send', 'pageview');
-</script>
 <style>
 input[type='range']  {
 		-webkit-appearance: none ;
@@ -49,6 +41,16 @@ input[type='range']  {
 		margin-top: -6px;
 	}
  </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-100014294-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body onload="ini()">  
@@ -75,7 +77,9 @@ input[type='range']  {
  <span id="rspVol">surround = 0.0</span></div>
 
 <div style="position: absolute; left: 10px; top: 550px;" > 
- Loop=<button id="loop" >OFF</button></div>
+ Loop : <input type="checkbox" id="loop" />
+<!--button id="loop" >OFF</button-->
+</div>
 <br> 
 
 <div style="position: absolute; left: 110px; top: 550px;">  
