--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no"> 
 
 <link rel="manifest" href="manifest.json"> 
-<link rel="icon" href="icon_48.png">
+<link rel=icon href=icon_48.png sizes="48x48" type="image/png">
 
 <script src="js/three.min.js"></script> 
 <script src="js/app.js"></script>  
