Latest virsion is

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ input[type='range']  {
 
 <div style="position: absolute; left: 124px; top: 40px;" >
 <img id='myimg' style="position: absolute; z-index: -1">
-  <div id="info"/></div>
+  <div id="info"/>This Page is no longer updated.Latest virsion is https://github.com/VirtualSP/VirtualSP/index.html</div>
 
 </body>
 </html>
