--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@ input[type='range']  {
 <div style="position: absolute; left: 124px; top: 40px;" >
 <img id='myimg' style="position: absolute; z-index: -1">
   <div id="info"/></div>
-This Page is no longer updated.Latest virsion is https://github.com/VirtualSP/VirtualSP/index.html
+This Page is no longer updated.Latest version is https://virtualsp.github.io/VSP/
 </body>
 </html>
