--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@ input[type='range']  {
 <img id='myimg' style="position: absolute; z-index: -1">
   <div id="info"/></div>
 This Page is no longer updated.<br>
-Latest version is <a href="url">https://virtualsp.github.io/VSP/index.html</a>
+Latest version is <a href="https://virtualsp.github.io/VSP/">here</a>
 </body>
 </html>
